--- a/bmo-commun/pom.xml
+++ b/bmo-commun/pom.xml
@@ -20,5 +20,11 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.16</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
