--- a/bmo-serveur/pom.xml
+++ b/bmo-serveur/pom.xml
@@ -45,6 +45,10 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>akandan.bahou.kassy</groupId>
+            <artifactId>bmo-commun</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
