--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,13 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!-- Supprimé maven.compiler.source et maven.compiler.target -->
         <java.version>17</java.version>
-        <maven.compiler.release>17</maven.compiler.release> <!-- Ajouté -->
+        <maven.compiler.release>17</maven.compiler.release>
         <javafx.version>17.0.10</javafx.version>
         <mysql.connector.version>8.0.33</mysql.connector.version>
         <org.json.version>20231013</org.json.version>
-        <slf4j.version>2.0.16</slf4j.version> <!-- Ajouté pour centraliser slf4j si vous le souhaitez -->
-        <junit.jupiter.version>5.10.0</junit.jupiter.version>
+        <slf4j.version>2.0.16</slf4j.version>
+        <!-- Versions JUnit et Mockito supprimées -->
         <maven.shade.plugin.version>3.5.1</maven.shade.plugin.version>
         <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
         <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
@@ -69,7 +68,6 @@
                 <version>${slf4j.version}</version>
             </dependency>
 
-
             <!-- Dépendances JavaFX -->
             <dependency>
                 <groupId>org.openjfx</groupId>
@@ -97,19 +95,7 @@
                 <version>${javafx.version}</version>
             </dependency>
 
-            <!-- Dépendances de Test (JUnit 5) -->
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-api</artifactId>
-                <version>${junit.jupiter.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-engine</artifactId>
-                <version>${junit.jupiter.version}</version>
-                <scope>test</scope>
-            </dependency>
+            <!-- Dépendances de Test (JUnit 5 et Mockito) supprimées -->
         </dependencies>
     </dependencyManagement>
 
@@ -121,7 +107,6 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven.compiler.plugin.version}</version>
                     <configuration>
-                        <!-- Utiliser <release> au lieu de source/target -->
                         <release>${maven.compiler.release}</release>
                         <encoding>${project.build.sourceEncoding}</encoding>
                     </configuration>
@@ -130,6 +115,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven.surefire.plugin.version}</version>
+                    <configuration>
+                        <skipTests>true</skipTests> <!-- S'assurer que les tests sont sautés -->
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
