--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>17</java.version>
         <maven.compiler.release>17</maven.compiler.release>
-        <javafx.version>17.0.10</javafx.version>
+        <!-- METTRE À JOUR LA VERSION DE JAVAFX ICI -->
+        <javafx.version>21.0.2</javafx.version>
         <mysql.connector.version>8.0.33</mysql.connector.version>
         <org.json.version>20231013</org.json.version>
         <slf4j.version>2.0.16</slf4j.version>
-        <!-- Versions JUnit et Mockito supprimées -->
         <maven.shade.plugin.version>3.5.1</maven.shade.plugin.version>
         <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
         <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
@@ -34,7 +34,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- Dépendances du projet BMO -->
             <dependency>
                 <groupId>akandan.bahou.kassy</groupId>
                 <artifactId>bmo-commun</artifactId>
@@ -51,7 +50,6 @@
                 <version>${project.version}</version>
             </dependency>
 
-            <!-- Dépendances communes -->
             <dependency>
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
@@ -68,7 +66,6 @@
                 <version>${slf4j.version}</version>
             </dependency>
 
-            <!-- Dépendances JavaFX -->
             <dependency>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-controls</artifactId>
@@ -94,8 +91,6 @@
                 <artifactId>javafx-media</artifactId>
                 <version>${javafx.version}</version>
             </dependency>
-
-            <!-- Dépendances de Test (JUnit 5 et Mockito) supprimées -->
         </dependencies>
     </dependencyManagement>
 
@@ -116,7 +111,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven.surefire.plugin.version}</version>
                     <configuration>
-                        <skipTests>true</skipTests> <!-- S'assurer que les tests sont sautés -->
+                        <skipTests>true</skipTests>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -131,17 +126,11 @@
                             </goals>
                         </execution>
                     </executions>
-                    <configuration>
-                        <!-- Configuration de base, sera affinée dans les modules si nécessaire -->
-                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.openjfx</groupId>
                     <artifactId>javafx-maven-plugin</artifactId>
                     <version>${javafx.maven.plugin.version}</version>
-                    <configuration>
-                        <!-- Configuration de base, sera affinée dans le module client -->
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
